--- a/views/equipo/seleccion-equipo.hbs
+++ b/views/equipo/seleccion-equipo.hbs
@@ -44,6 +44,7 @@
     let idgrupo = document.getElementById('idgrupo').value;
     let idtema = document.getElementById('idtema').value;
     let idactividad = document.getElementById('idactividad').value;
+    let second = document.getElementById('second').value;
     let seleccion;
 
     $(function cargarDatos() {
