--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,8 +8,8 @@
     <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="/js/bootstrap4-editable/css/bootstrap-editable.css" type="text/css">
     <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <link href="/font/Montserrat.css" rel="stylesheet" type="text/css">
 
-    <link href="font/" rel="stylesheet">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
     <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
