--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -8,7 +8,7 @@
             <ul class="nav flex-column">
                 {{#each temas}}
                     <li class="nav-item"><a class="nav-link"
-                                            href="/grupo/calificaciones/{{../idgrupo}}/{{dataValues.id}}/0"><i
+                                            href="/grupo/calificaciones/{{../idgrupo}}/{{dataValues.id}}"><i
                             class="bi-book-half"></i><strong> {{dataValues.nombre}}</strong></a></li>
                 {{/each}}
             </ul>
@@ -18,7 +18,7 @@
     <!--col-md-9 ml-sm-auto col-lg-10 px-md-4-->
     <main class="col col-md col-xl col-sm col-lg" role="main">
         <div id="toolbar">
-            <h3>Tema: {{tema.dataValues.nombre}}</h3>
+            <h3>Tema: {{tema.dataValues.nombre}} {{#iflogico title '===' 1}} - Segunda Oportunidad {{/iflogico}}</h3>
         </div>
         <div class="row">
             <div class="col navbar-nav-scroll">
