--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -168,7 +168,7 @@
 </header>
 
 <main class="container-fluid mw-100 mh-100 vh-100 min-vh-100 vw-100 min-vw-100 d-flex flex-column m-2 p-2">
-
+    {{>messages}}
     {{{ body }}}
 
 </main>
