--- a/views/grupo/vista-inicio-grupo-lista.hbs
+++ b/views/grupo/vista-inicio-grupo-lista.hbs
@@ -10,6 +10,7 @@
                         {{else}}href="/grupo-inicio/equipos/{{../idgrupo}}/{{dataValues.id}}" {{/if}}><i
                             class="bi-book-half"></i><strong> {{dataValues.nombre}}</strong></a></li>
                 {{/each}}
+                <li class="nav-item"><a class="nav-link" href="/grupo/vista-general/alumnos/{{idgrupo}}/"><i class="bi-book-half"></i><strong> Todos</strong></a></li>
             </ul>
         </div>
     </nav>
