Cambio de colores en las graficas

--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -65,7 +65,8 @@
         data: JSON.parse(dataReprobacionAct),
         xkey:'label',
         ykeys:['a','b'],
-        labels: ['No aprobadas', 'Aprobados'],
-        resize: true
+        labels: ['No aprobados','Aprobados'],
+        resize: true,
+        barColors: ['#757575', '#065CA3']
     })
 </script>
