Cambio de colores en las graficas

--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -58,6 +58,7 @@
             return y + "%"
         },
         resize: true,
+        colors: ['#065CA3', '#757575']
     })
 
     new Morris.Bar({
