--- a/views/grupo/vista-inicio-grupo-seleccion.hbs
+++ b/views/grupo/vista-inicio-grupo-seleccion.hbs
@@ -29,7 +29,7 @@
                         <i class="bi bi-arrow-left-circle-fill" style="size:1.75rem;"></i>
                     </a>
                 </span>
-                <a style="font-size: 1.75rem;font-weight: 500;line-height: 1.2; margin-bottom: 0.5rem;">Tema: {{tema.dataValues.nombre}}</a>
+                <a style="font-size: 1.75rem;font-weight: 500;line-height: 1.2; margin-bottom: 0.5rem;">Tema: {{tema.dataValues.nombre}}{{title}}</a>
             </div>
         </div>
 
@@ -85,14 +85,14 @@
                         <div id="indiceReprobacion" style="width: 100%; height: 250px;">
                         </div>
                         <p>
-                            Actividades aprobadas: {{actAprobadas}}
+                            {{#if title}}Temas aprobados{{else}}Actividades aprobadas{{/if}}: {{actAprobadas}}
                         </p>
                         <p>
                             {{#if title}}Temas no aprobados{{else}}Actividades no aprobadas{{/if}}: {{actReprobadas}}
                         </p>
                 </div>
                 <div class="col col-md col-xl col-sm col-lg graph-container">
-                    <div class="caption text-center">Rendimiento en actividades</div>
+                    <div class="caption text-center">Rendimiento en {{#if title}}Temas{{else}}actividades{{/if}}</div>
                     <input type="hidden" id="actividadesReprobacionData" value="{{dataReprobacionAct}}">
                     <div id="actividadesAprobacion" style="width: 90%; height: 250px;"></div>
 
