--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -15,7 +15,14 @@
         font-wight: 400;
         font-size: 9pt;
     }
-
+    .medium p{
+        font-weight: 500;
+        font-size: 10px;
+    }
+    .extra-light p{
+        font-weight: 200;
+        font-size: 10pt;
+    }
     #page-container {
         position: relative;
         min-height: 90vh;
@@ -24,12 +31,12 @@
     #content-wrap {
         padding-bottom: 2.5rem; /* Footer height */
     }
-
-    #footer {
+    .footer {
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 2.5rem; /* Footer height */
+        height: 60px;
+        line-height: 60px
     }
 
 </style>
