Agregado el calculo de calificacion de segunda oportunidad para graficación.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -49,7 +49,7 @@
 
 <body>
 
-<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar  no-print container-fluid sticky-top" id="navbar" style="background: #131418">
+<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar no-print sticky-top" id="navbar" style="background: #131418; width: 100vw;">
 
     <ul class="navbar-nav">
 
