--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -47,7 +47,7 @@
 
 </head>
 
-<body>
+<body class="container-fluid">
 
 <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar no-print sticky-top" id="navbar" style="background: #131418; width: 100vw;">
 
@@ -167,7 +167,7 @@
 
 </header>
 
-<main class="container-fluid d-flex flex-column m-2 p-2">
+<main class="container-fluid">
     {{>messages}}
     {{{ body }}}
 
