Se cambió la selección del campo pronombre de un Combobox a radio buttons.

--- a/views/reporte/formulario-reporte-desercion.hbs
+++ b/views/reporte/formulario-reporte-desercion.hbs
@@ -17,11 +17,23 @@
                 <input type="text" class="form-control" id="coordinadorNombre" name="coordinadorNombre" required>
             </div>
         </div>
+        <div class="row p-2 m-2">
+            <div class="col">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" value="Coordinadora de carrera de " id="valequipo1"
+                           name="pronombre" checked>
+                    <label class="form-check-label" for="valequipo1">Coordinadora de carrera de</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-check ">
+                    <input class="form-check-input" type="radio" value="Coordinador de carrera de " id="valequipo2"
+                           name="pronombre">
+                    <label class="form-check-label" for="valequipo2">Coordinador de carrera de</label>
+                </div>
+            </div>
+        </div>
         <div class="row-cols-1 m-2 p-2">
-            <select class="form-select custom-select" id="pronombre" name="pronombre" required>
-                <option value="Coordinadora de carrera de ">Coordinadora de carrera de</option>
-                <option value="Coordinador de carrera de ">Coordinador de carrera de</option>
-            </select>
             <label for="carrera">Carrera</label>
             <select class="form-select custom-select" id="carrera" name="carrera" required>
                 <option value="Ingenieria en Aeronáutica">Ingenieria en Aeronáutica</option>
