--- a/views/grupo/datos-grupo-editar.hbs
+++ b/views/grupo/datos-grupo-editar.hbs
@@ -10,21 +10,21 @@
             </button>
         </div>
     {{/each}}
-
-
     <!-- Cuerpo del archivo -->
 
-    <h1 class="display-6">Datos del grupo</h1>
+    <div class="row m-2 p-2">
+        <h1 class="display-6">Datos del grupo</h1>
+    </div>
     <form class="needs-validation" action="/grupo/editar/{{idgrupo}}?_method=PUT" method="POST" novalidate>
         <input type = "hidden" name = "_method" value="PUT">
-        <div class="row">
+        <div class="row m-2 p-2">
             <div class="col">
                 <label for="asignatura" class="form-label">Asignatura</label>
                 <input type="text" class="form-control" name="asignatura" id="asignatura" value="{{grupo.dataValues.asignatura}}" required>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row m-2 p-2">
             <div class="col">
                 <label for="clave" class="form-label">Clave</label>
                 <input type="text" class="form-control" name="clave" id="clave" value="{{grupo.dataValues.clave}}" required>
@@ -52,7 +52,50 @@
                 </select>
             </div>
         </div>
+        <!-- Seccion para editar de alumnos-->
+        <div class="row m-2 p-2">
+            <h3 class="display-5">Editar alumnos</h3>
+        </div>
+        <!-- Datos del alumno -->
+        <div class="row m-2">
+            <div class="col input-group">
+                <input class="form-control" type="text" placeholder="No. Control" id="ClaveBox" name="ClaveBox"
+                       aria-label="Clave">
+            </div>
+            <div class="col input-group">
+                <input class="form-control" type="text" placeholder="Apellidos y Nombre(s)" id="NombreBox" name="NombreBox"
+                       aria-label="Nombre(s)">
+            </div>
+        </div>
+        <div class="row-cols-1  d-flex flex-row-reverse ">
+            <div class="col-auto d-flex flex-row-reverse p-3">
+                <div id="toolbar">
+                    <a id="remove" class="btn btn-danger">Eliminar</a>
+                    <a id="add" class="btn btn-primary">Añadir nuevo</a>
+                </div>
+            </div>
+        </div>
+        <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
+        <input type="hidden" id="idAlumnosEliminados" name="idAlumnosEliminados" value="{}">
+        <div class="row-cols-1 ">
+            <div class="col-auto navbar-nav-scroll">
+                <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
+                       data-search="true"
+                       data-advanced-search="true" data-filter-control="true" name="table" data-editable="true">
+                    <thead>
+                    <tr>
+                        <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
+                        <th data-field="clave" data-sorteable="false" data-editable="true">No. Control</th>
+                        <th data-field="nombre" data-sorteable="true" data-editable="true">Nombre</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!---->
         <div class="row ">
             <div class="col d-flex flex-row-reverse p-2 m-2">
                 <button class="btn btn-primary" type="submit">Guardar</button>
@@ -61,4 +104,5 @@
         </div>
     </form>
 </div>
+<script src="/js/grid-editar-grupo-helper.js"></script>
 
