--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -19,6 +19,7 @@
     <div class="col navbar-nav-scroll">
         <div class="container">
             {{#if equipo}}
+                <input type="hidden" id="idgrupo" value="{{idgrupo}}">
                 <div class="card">
                     <div class="card-header">
                         <div class="row">
