--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -40,11 +40,19 @@
                                 <input type="text" class="form-control" aria-label="Nombre" disabled value="{{equipo.dataValues.nombre}}">
                             </div>
                         </div>
+                        <div class="row-cols-1  d-flex flex-row-reverse ">
+                            <div class="col-auto d-flex flex-row-reverse p-3">
+                                <div id="toolbar">
+                                    <a id="remove" class="btn btn-danger" title="Elimina los alumnos seleccionados de la tabla inferior.">Eliminar seleccionados</a>
+                                    <a id="add" class="btn btn-primary" title="Añade al equipo el alumno indicado en la caja de texto anterior.">Añadir alumno</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row-cols-1">
                             <input type="hidden" id="valorTablaTemas" name="valorTablaTemas"
                                    value="{{listaFormateadaTemas}}">
-                            <table id="tableTemas" data-toggle="table" data-click>
-                                <thead>
+                            <table id="tableTemas" data-toggle="table">
+                            <thead>
                                 <tr>
                                     <th data-field="numerotema" data-sorteable="false">No. tema</th>
                                     <th data-field="nombre" data-sorteable="true">Nombre</th>
@@ -58,13 +66,9 @@
                         <div class="row-cols-1">
                             <h4>Integrantes del equipo</h4>
                         </div>
-
                         <div class="row-cols-1">
                             <div class="input-group mb-3">
                                 <input class="form-control" type="text" id="inputBusqueda" placeholder="No. control o Nombre del alumno iniciando por apellidos" aria-describedby="BtnBusqueda">
-                                <div class="input-group-append" >
-                                    <button class="btn-primary btn" type="submit" id="BtnBusqueda">Agregar</button>
-                                </div>
                             </div>
                         </div>
                         <div class="row-cols-1">
@@ -125,7 +129,6 @@
 
     </div>
 </div>
-<script src="/js/grid-equipos-helper.js" type="text/javascript"></script>
 <script>
     $('#BtnBusqueda').on('click', function (e){
         e.preventDefault();
@@ -143,5 +146,38 @@
                 console.log("Error");
             }
         })
+    });
+
+    $('#remove').on('click', function (e){
+        e.preventDefault();
+        let data = {};
+        data.datos =  $.map(tableAlumnos.bootstrapTable('getSelections'), function (row){
+            return row.id
+        });
+
+        const claves  = $.map(tableAlumnos.bootstrapTable('getSelections'), function (row){
+            return row.clave;
+        });
+        if(data.datos.length !== 0){
+            console.log(data.datos);
+            const idgrupo = document.getElementById("idgrupo").value;
+            const idequipo = document.getElementById('idequipo').value;
+            $.ajax({
+                type: "DELETE",
+                contentType: 'application/json',
+                url: `/equipo-desasociar/${idgrupo}/${idequipo}/${JSON.stringify(data.datos)}`,
+
+                success: function (data){
+                    tableAlumnos.bootstrapTable('remove',{
+                        field: 'clave',
+                        values: claves
+                    })
+
+                },
+                error: function (){
+                    console.log("Error");
+                }
+            })
+        }
     });
 </script>
