--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -20,6 +20,7 @@
         <div class="container">
             {{#if equipo}}
                 <input type="hidden" id="idgrupo" value="{{idgrupo}}">
+                <input type='hidden' id="idequipo" value="{{equipo.dataValues.id}}">
                 <div class="card">
                     <div class="card-header">
                         <div class="row">
@@ -67,7 +68,8 @@
                             <h4>Integrantes del equipo</h4>
                         </div>
                         <div class="row-cols-1">
-                            <div class="input-group mb-3">
+                            <div class="form-group mb-3">
+                                <label for="inputBusqueda">Introduzca el nombre o número de control del alumno que desea agregar al equipo</label>
                                 <input class="form-control" type="text" id="inputBusqueda" placeholder="No. control o Nombre del alumno iniciando por apellidos" aria-describedby="BtnBusqueda">
                             </div>
                         </div>
@@ -75,11 +77,11 @@
                             <input type="hidden" id="valorTablaAlumnos" name="valorTablaAlumnos"
                                    value="{{listaFormateadaAlumnos}}">
                             <table id="tableAlumnos" data-toggle="table" data-toolbar="#toolbar"
-                                   data-click-to-select="false"
-                                   data-search="true"
-                                   data-advanced-search="true" data-filter-control="true">
+                                   data-filter-control="true" data-click-to-select="true">
                                 <thead>
                                 <tr>
+
+                                    <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
                                     <th data-field="clave" data-sorteable="false">No. Control</th>
                                     <th data-field="nombre" data-sorteable="true">Nombre</th>
                                 </tr>
@@ -130,22 +132,49 @@
     </div>
 </div>
 <script>
-    $('#BtnBusqueda').on('click', function (e){
+    let tableTemas = $('#tableTemas');
+    let tableAlumnos = $('#tableAlumnos');
+
+    $(function cargarDatos() {
+        let listaTemas = document.getElementById("valorTablaTemas").value;
+        listaTemas = JSON.parse(listaTemas);
+
+        let rowsTemas = [];
+        for (let dato = 0; dato < listaTemas.length; dato++) {
+            rowsTemas.push(listaTemas[dato]);
+        }
+        tableTemas.bootstrapTable('load', rowsTemas);
+
+        let listaAlumnos = document.getElementById("valorTablaAlumnos").value;
+        listaAlumnos = JSON.parse(listaAlumnos);
+        let rowsAlumnos = [];
+        for (let dato = 0; dato < listaAlumnos.length; dato++) {
+            rowsAlumnos.push(listaAlumnos[dato]);
+        }
+        tableAlumnos.bootstrapTable('load', rowsAlumnos);
+
+    });
+    $('#add').on('click', function (e){
         e.preventDefault();
         let data = {};
         data.datos =  document.getElementById('inputBusqueda').value;
-        $.ajax({
-            type: "POST",
-            contentType: 'application/json',
-            url: `/equipo-busqueda/${("#idgrupo").value}/${data.datos}`,
-            success: function (data){
-                tableAlumnos.bootstrapTable('append',JSON.parse(data))
-                console.log(data)
-            },
-            error: function () {
-                console.log("Error");
-            }
-        })
+        if(data.datos.trim() !== ''){
+            const idgrupo = document.getElementById("idgrupo").value;
+            const idequipo = document.getElementById('idequipo').value;
+            $.ajax({
+                type: "POST",
+                contentType: 'application/json',
+                url: `/equipo-busqueda/${idgrupo}/${idequipo}/${data.datos}`,
+                success: function (data){
+                    tableAlumnos.bootstrapTable('append',JSON.parse(data))
+                    document.getElementById('inputBusqueda').value = '';
+                },
+                error: function () {
+                    console.log("Error");
+                }
+            })
+        }
+
     });
 
     $('#remove').on('click', function (e){
