Bug fix: Los valores vacíos en las tablas ahora se marcan como 0 en vez de "Empty"

--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -36,7 +36,8 @@
                     <tr>
                         <th data-field="clave" data-sorteable="false">No. Control</th>
                         <th data-field="nombre" data-sorteable="true">Nombre</th>
-                        <th data-field="calificacion" id="calificacion" data-editable="true" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación</th>
+                        <th data-field="calificacion" id="calificacion" data-editable="true" data-editable-type="number" data-editable-min="0"  data-editable-max="100"
+                        data-editable-emptytext="0">Calificación</th>
                     </tr>
                     </thead>
                     <tbody>
